logs/ccsgp-get-started.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pint-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/ccsgp_get_started'...
Listing './lib/python3.5/site-packages/ccsgp_get_started/ccsgp'...
Listing './lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot'...
Compiling './lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot/_Gnuplot.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (_Gnuplot.py, line 535)
Compiling './lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot/gnuplot_Suites.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot/gnuplot_Suites.py", line 37
    if _arguments: raise TypeError, 'No optional args expected'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot/test.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/ccsgp/Gnuplot/test.py", line 34
    print str
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ccsgp_get_started/ccsgp/myplot.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/ccsgp/myplot.py", line 198
    return re.compile(ur'[\W]+',re.UNICODE).sub('_',str.strip())
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ccsgp_get_started/examples'...
Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_ccX.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_ccX.py", line 54
    print 'stddev = %.2g' % stddev
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_datdir.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_datdir.py", line 90
    print gp_datdir(args.initial, int(args.topN))
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_lcltpt.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_lcltpt.py", line 34
    print gp_lcltpt()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_panel.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_panel.py", line 112
    print gp_panel(args.version, args.skip)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_ptspec.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_ptspec.py", line 249
    print gp_ptspec()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_rapp.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_rapp.py", line 55
    print 'beta0 = ', beta0, ', eta = ', eta
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_rdiff.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_rdiff.py", line 419
    print dp
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_sims.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_sims.py", line 36
    print contribs.keys()
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_stack.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_stack.py", line 201
    print scale
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ccsgp_get_started/examples/gp_xfac.py'...
***   File "./lib/python3.5/site-packages/ccsgp_get_started/examples/gp_xfac.py", line 74
    print gp_xfac()
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ccsgp_get_started-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/include'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/f2py_f90_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/gen_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/gen_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/pyrex_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/pyrex_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext/src'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests/swig_ext/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.9.2.dist-info'...
Listing './lib/python3.5/site-packages/pint'...
Listing './lib/python3.5/site-packages/pint/compat'...
Listing './lib/python3.5/site-packages/pint/testsuite'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uncertainties'...
Listing './lib/python3.5/site-packages/uncertainties/lib1to2'...
Listing './lib/python3.5/site-packages/uncertainties/lib1to2/fixes'...
Listing './lib/python3.5/site-packages/uncertainties/unumpy'...
Listing './lib/python3.5/site-packages/uncertainties-2.4.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
